tests/snapshots/basic__it_outputs_error_and_exit_1_on_unexpected_arg.snap
---
source: tests/basic.rs
expression: output
---
command cat <<'EOF_96fc7ed9'
[1m[31merror:[0m unexpected argument '[33m--invalid[0m' found

[1m[4mUsage:[0m [1mmyapp[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_96fc7ed9
exit 1
