tests/snapshots/basic__it_outputs_version_and_exit_0_on_short_version.snap
---
source: tests/basic.rs
expression: output
---
command cat <<'EOF_da707e63'
myapp 0.1.0
EOF_da707e63
exit 0
