tests/snapshots/basic__variables.snap
---
source: tests/basic.rs
expression: "util::run(spec, args)"
---
claptrap_mode='stream'
claptrap_protocol='udp'
